--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,8 @@ body {
     margin: 0px;
 }
 .header .display-image{
-    width:500px;
+    width:430px;
+    margin:auto;
 }
 .link {
     text-decoration: none;
