--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,9 @@ body {
     margin: 0px;
 }
 .header .display-image{
-    width:430px;
+    width:400px;
     margin:auto;
+    text-align: center;
 }
 .link {
     text-decoration: none;
